# datathon-7mlet-grupo-62

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/kaggle/: README.md
data/processed/: games_metadata_with_embeddings.json
data/synthetic_enrichment/: delayed_rewards.jsonl  offer_catalog.json  offer_events.jsonl  user_profiles.json
notebooks/: 01_eda_and_quality.ipynb  test_ids.py
reports/: data-generation.md  data-quality.md
src/features/: extract_semantics.py  generate_synthetic_data.py  validate_catalog.py
