[tool.poetry]
name = "datathon-7mlet-marketplace"
version = "0.1.0"
description = "Plataforma de Experimentacao Adaptativa (Multi-Armed Bandit) para Marketplace de Jogos"
authors = ["Grupo 62 - MLET7 <grupo62@fiap.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
# Pipeline de dados e LLM local
ollama = ">=0.3.0"
openai = ">=1.0.0"
pydantic = ">=2.6.0"
python-dotenv = ">=1.0.0"
# Manipulacao de dados
pandas = ">=2.0.0"
numpy = ">=1.24.0"
# Modelagem (Multi-Armed Bandit) e rastreio de experimentos
scikit-learn = ">=1.2.0"
mlflow = ">=2.10.0"
# RAG / vector store para o assistente LLM
chromadb = ">=0.5.0"
# Servico de inferencia (Etapa 5)
fastapi = ">=0.110.0"
uvicorn = ">=0.28.0"
# Analise exploratoria e visualizacao
matplotlib = ">=3.7.0"
seaborn = ">=0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
jupyter = ">=1.0.0"
black = ">=24.0.0"

# Pontos de entrada: permitem rodar os pipelines como comandos do terminal.
[tool.poetry.scripts]
extract-semantics = "src.features.extract_semantics:main"
generate-synthetic = "src.features.generate_synthetic_data:generate_synthetic_data"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
